crates/carina-tui/src/app/snapshots/carina_tui__app__render__transcript_tests__composer_chrome_en_approval_120.snap
---
source: crates/carina-tui/src/app/render.rs
expression: rendered
---
size=120x2

run waiting for approval · HITL ask · isolation safe edit + command sandbox · ctx 42% · screen fullscreen
styles:
(0,1)..(24,1) (Rgb(232, 168, 95), Reset, NONE)
(24,1)..(27,1) (Rgb(150, 160, 156), Reset, NONE)
(27,1)..(35,1) (Rgb(142, 219, 210), Reset, NONE)
(35,1)..(78,1) (Rgb(150, 160, 156), Reset, NONE)
(78,1)..(85,1) (Rgb(142, 219, 210), Reset, NONE)
(85,1)..(105,1) (Rgb(150, 160, 156), Reset, NONE)
