crates/carina-tui/src/app/snapshots/carina_tui__app__render__transcript_tests__composer_chrome_en_approval_80.snap
---
source: crates/carina-tui/src/app/render.rs
expression: rendered
---
size=80x2
run waiting for approval
styles:
(0,0)..(24,0) (Rgb(232, 168, 95), Reset, NONE)
