crates/carina-tui/src/app/snapshots/carina_tui__app__render__transcript_tests__composer_chrome_zh_hans_idle_80.snap
---
source: crates/carina-tui/src/app/render.rs
expression: rendered
---
size=80x3
────────────────────────────────────────────────────────────────────────────────
❯ 描述你想完成的改动。
────────────────────────────────────────────────────────────────────────────────
styles:
(0,0)..(80,0) (Rgb(52, 65, 68), Reset, NONE)
(0,1)..(80,1) (Rgb(150, 160, 156), Reset, NONE)
(0,2)..(80,2) (Rgb(52, 65, 68), Reset, NONE)
